# Crunch

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
crunch_files/: arithmetic.crunch  test.crunch
src/: main.cpp
src/ast/: ast.h
src/crunch_files/: arithmetic.crunch  basic.crunch  if.crunch  test.crunch
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: grammar.md  parser.cpp  parser.h
src/semantics/: symbol_table.cpp  symbol_table.h
